Fixed horizontal scroll issue due to the large background image

--- a/assets/css/business.style.css
+++ b/assets/css/business.style.css
@@ -5,6 +5,11 @@ body {
 	font-family: "Roboto", Arial, sans-serif;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: "Roboto", Arial, sans-serif;
 }
@@ -35,6 +40,10 @@ h1, h2, h3, h4, h5, h6 {
 	left: 0;
 	background: rgba(20,17,44,.2);
 	content: url("../img/front.jpeg");
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	z-index: 1;
 }
 
